--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "socketio",
   "version": "1.0.0",
   "main": "server/server.js",
+  "scripts": {
+    "start": "node server/server.js"
+  },
   "dependencies": {
     "express": "^4.15.3",
     "socket.io": "^2.0.3"
